# ChangeLog for dev-libs/boost
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.341 2015/01/02 13:45:12 ago Exp $

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> boost-1.55.0-r2.ebuild:
  Stable for x86, wrt bug #525286

  26 Dec 2014; Anthony G. Basile <blueness@gentoo.org> boost-1.55.0-r2.ebuild:
  Stable on ppc and ppc64, bug #525286

*boost-1.56.0-r1 (24 Dec 2014)

  24 Dec 2014; Sergey Popov <pinkbyte@gentoo.org> -boost-1.55.0-r1.ebuild,
  -boost-1.56.0.ebuild, +boost-1.56.0-r1.ebuild,
  +files/boost-1.56.0-build-auto_index-tool.patch:
  Build auto_index tool when USE tools is enabled, wrt bug #529066. Drop old

  12 Nov 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.55.0-r2.ebuild:
  Stable on amd64, wrt bug #525286

  11 Nov 2014; Markus Meier <maekke@gentoo.org> boost-1.55.0-r2.ebuild:
  arm stable, bug #525286

  06 Nov 2014; Jeroen Roovers <jer@gentoo.org> boost-1.55.0-r2.ebuild:
  Stable for HPPA (bug #525286).

  14 Oct 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r7.ebuild,
  boost-1.53.0-r1.ebuild, boost-1.54.0-r1.ebuild, boost-1.55.0-r1.ebuild,
  boost-1.55.0-r2.ebuild, boost-1.56.0.ebuild:
  Building with MPI support requires threads, add REQUIRED_USE for that

  26 Sep 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.56.0.ebuild:
  Add workaround for building with USE=tools, wrt bug #522682

*boost-1.56.0 (04 Sep 2014)

  04 Sep 2014; Sergey Popov <pinkbyte@gentoo.org> +boost-1.56.0.ebuild:
  Version bump, wrt bug #519476

  19 Aug 2014; Raúl Porcel <armin76@gentoo.org> boost-1.52.0-r7.ebuild:
  alpha/ia64/sparc stable wrt #518488

  14 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.52.0-r7.ebuild:
  Stable for x86, wrt bug #518488

  14 Aug 2014; Sergey Popov <pinkbyte@gentoo.org> boost-1.55.0-r2.ebuild:
  Add proper blocker for app-emulation/emul-linux-x86-cpplibs, wrt bug #519744,
  inherit multilib eclass explicitly
