@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/boost
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.341 2015/01/02 13:45:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/boost/ChangeLog,v 1.342 2015/01/05 15:30:02 aballier Exp $
+
+  05 Jan 2015; Alexis Ballier <aballier@gentoo.org> boost-1.56.0-r1.ebuild:
+  fix cross compile of boost_python; leave native path as is
 
   02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> boost-1.55.0-r2.ebuild:
   Stable for x86, wrt bug #525286
